--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prom-client": "^15.1.3",
     "razorpay": "^2.9.4",
     "redis": "^4.7.0",
-    "winston": "^3.13.1"
+    "winston": "^3.13.1",
+    "winston-cloudwatch": "^6.3.0"
   }
 }
